# python-fullstack

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  app.py  docker-compose-dev.yaml  docker-compose-local.yaml  main.py  requirements.txt
backend/config/: config.py
backend/database/: database.py  testdb.db  todosapp.db
backend/docs/: deployment.md  full-stack.md  middleware.md  package-mgmt.md  proxy.md
backend/middleware/: logging.py
backend/models/: models.py
backend/nginx/: dev.conf  nginx-selfsigned.crt  nginx-selfsigned.key
backend/routers/: admin.py  auth.py  health.py  learn.py  todos.py  users.py
backend/templates/: layout.html
backend/test/: test_admin.py  test_auth.py  test_todos.py  test_users.py  utils.py
database/: database.py  todosapp.db
frontend/templates/: login.html
models/: models.py
routers/: admin.py  auth.py  todos.py  users.py
static/js/: base.js
templates/: register.html
test/: test_admin.py  test_auth.py  test_health.py  test_todos.py  test_users.py  utils.py
